--- a/assets/footer.scss
+++ b/assets/footer.scss
@@ -2,6 +2,7 @@
     &.container{padding-top: 30px};
     .links {
         padding-bottom: 40px;
+        padding-top: 20px;
     }
     h5 {
         color: $text-color;
